[package]
name = "mini-blockchain"
version = "0.3.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
tokio = { version = "1", features = ["full"] }